--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -8,6 +8,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Upload
-        uses: actions/upload-artifact@v4.1
+        uses: actions/upload-artifact@v4
         with:
           path: .
+          include-hidden-files: true
