--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -28,4 +28,4 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
-          npm generate
+          npm run generate
